# Learning_Python

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: author_book_publisher.db  cascade_delete.db  orm_test.db  people.db  test.db
docs/: 00.Python_EcoSys_introduction.md  01.Install_python_env_on_linux.md  03.Install_poetry.md  04.Install_anaconda.md  05.Install_pyenv_on_windows.md  Configure_jupyter.md  Install_python_package_offline.md  Use_conda_to_setup_python_dev_env.md
geeks_for_geeks/Lesson03_Data_types/: 01.Set_String.ipynb  02.List.ipynb  03.Tuple.ipynb  04.Set.ipynb  05.Dictionary.ipynb  06.Array.ipynb
geeks_for_geeks/Lesson10_Python_collections/: 01.Collection_module_intro_counter.ipynb
images/: README.md
learning_python/: README.md
learning_python/Lesson01_Basics/: 01.Introduction.ipynb  Introduction.ipynb
learning_python/Lesson02_Functions/: 01.function_basics.ipynb  02.function_parameters.ipynb  03.Higher_Order_functions.ipynb  04.Return_functions_and_closure.ipynb  05.Decorator.ipynb  06.Lambda_function.ipynb  07.Partial_function.ipynb  s01_function_basics.ipynb  s03_function_parameters.ipynb
learning_python/Lesson03_Data_types/: 01.Set_String.ipynb  02.List.ipynb  03.Tuple.ipynb  04.Set.ipynb  05.Dictionary.ipynb  07.Slicing_collections.ipynb  08.Iteration.ipynb  09.List_Comprehension.ipynb  10.List_generator.ipynb  11. Iterator_VS_Iterable.ipynb
learning_python/Lesson04_Module_Package/: 01.Modules.ipynb  02.Packages.ipynb  03.Manage_third_party_package.ipynb  (+2 more)
tests/: test_learning_python.py
(+96 files in other folders)
