[tool.poetry]
name = "Learning_Python"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
SQLAlchemy = "^2.0.4"
treelib = "^1.6.1"
pandas = "^1.5.2"
Flask = "^2.2.2"
numpy = "^1.24.0"
connexion = {extras = ["swagger-ui"], version = "^2.14.1"}
flask-marshmallow = {extras = ["sqlalchemy"], version = "^0.14.0"}
boto3 = "^1.34.86"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pytest.ini_options]
markers = [
    "test_simple: tests for simple test demo (select with '-m \"test_simple\"')",
    "test_fixture: tests for fixture test demo (select with '-m \"test_fixture\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
